[gd_scene load_steps=9 format=2]

[ext_resource path="res://defensive_tower_gamma/DefensiveTowerGamma.gd" type="Script" id=1]
[ext_resource path="res://defensive_tower_gamma/DefensiveTowerBaseGamma.tscn" type="PackedScene" id=2]
[ext_resource path="res://defensive_tower_gamma/DefensiveTowerTurretGamma.tscn" type="PackedScene" id=3]
[ext_resource path="res://defensive_tower_gamma/DefensiveTowerCannonGamma.tscn" type="PackedScene" id=4]
[ext_resource path="res://defensive_tower_gamma/DefensiveTowerBarrelGamma.tscn" type="PackedScene" id=5]
[ext_resource path="res://defensive_tower_gamma/DefensiveTowerBulletChamberGamma.tscn" type="PackedScene" id=6]
[ext_resource path="res://defensive_tower_gamma/DefensiveTowerCannonShieldGamma.tscn" type="PackedScene" id=7]








[sub_resource type="Animation" id=1]

resource_name = "tower_gamma_animation"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Base/Turret/Cannon/CannonShieldLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -12, 0 ), Vector2( -20, 0 ), Vector2( -12, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Base/Turret/Cannon/CannonShieldRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 0 ), Vector2( 20, 0 ), Vector2( 12, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Base/Turret/Cannon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 8 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Base/Turret/Cannon/Barrel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 10 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Base/Turret/Cannon/BulletChamber:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 16 ), Vector2( 0, 20 ), Vector2( 0, 16 ) ]
}

[node name="DefensiveTowerGamma" type="Node2D"]

script = ExtResource( 1 )
shot_speed = 1
created_bullet_speed = 200
created_bullet_scale_factor = 0.5
shooting_series = true
bullet_caliber = 2
tower_shot_range = 200

[node name="Base" parent="." index="0" instance=ExtResource( 2 )]

[node name="Turret" parent="Base" index="2" instance=ExtResource( 3 )]

_sections_unfolded = [ "Transform" ]

[node name="Cannon" parent="Base/Turret" index="1" instance=ExtResource( 4 )]

_sections_unfolded = [ "Transform" ]

[node name="Barrel" parent="Base/Turret/Cannon" index="1" instance=ExtResource( 5 )]

_sections_unfolded = [ "Transform" ]

[node name="BulletChamber" parent="Base/Turret/Cannon" index="2" instance=ExtResource( 6 )]

position = Vector2( 0, 16 )
_sections_unfolded = [ "Transform" ]

[node name="CannonShieldLeft" parent="Base/Turret/Cannon" index="3" instance=ExtResource( 7 )]

position = Vector2( -12, 0 )
_sections_unfolded = [ "Transform" ]

[node name="CannonShieldRight" parent="Base/Turret/Cannon" index="4" instance=ExtResource( 7 )]

position = Vector2( 12, 0 )
scale = Vector2( -1, 1 )
_sections_unfolded = [ "Transform" ]

[node name="bullet_start_Position2D" type="Position2D" parent="Base/Turret" index="2"]

position = Vector2( 0, -50 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayerTowerGamma" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/tower_gamma_animation = SubResource( 1 )
blend_times = [  ]

[connection signal="animation_finished" from="AnimationPlayerTowerGamma" to="." method="_on_AnimationPlayerTowerGamma_animation_finished"]


